--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
 
-    <div class="site-section" id="next">
+    <div class="site-section" id="aboutus">
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-8 text-center">
@@ -229,7 +229,7 @@
 
 
 
-<section class="site-section" id="gallery-section" data-aos="fade">
+<section class="site-section" id="activities" data-aos="fade">
       
 
       <div class="container">
@@ -351,7 +351,7 @@
    
 
 
-    <section class="site-section bg-light" id="contact-section" data-aos="fade">
+    <section class="site-section bg-light" id="contact" data-aos="fade">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
