--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 <!--Why Buy Mexican Insurance-->
 
- <div class="site-section cta-big-image" id="next" style="margin-top: 5em;">
+ <div class="site-section cta-big-image" id="aboutus" style="margin-top: 5em;">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
@@ -139,7 +139,7 @@
 
 
 
-    <div class="site-section" id="aboutus">
+    <div class="site-section">
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-8 text-center">
