--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="row mb-5">
           <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="" data-toggle="modal" data-target="#loginfromindex" style="cursor: pointer;">
             <img src="images/icons/vehic.png" alt="Go 2 Baja" class="img-fluid w-25 mb-4">
-            <p class="texto-icons">Auto, Trailer, Motorcycle<br>and RV Insurance</p>
+            <p class="texto-icons">Auto, Trailer, UTV, Motorcycle<br>and RV Insurance</p>
           </div>
           <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
             <img src="images/icons/licencia.png" alt="Go 2 Baja" class="img-fluid w-25 mb-4">
@@ -395,16 +395,30 @@
             <div style="text-align: center;">
               <img src="images/icons/chubb.png" alt="Logo Chubb" class="img-fluid w-25 mb-4">
             </div>
-            <div style="text-align: center;">
-              <p><i class="fa fa-star" aria-hidden="true"></i>&nbsp;No. 1 P&C Company in the World.</p>
-              <p><i class="fa fa-star" aria-hidden="true"></i>&nbsp;No. 1 Tourist Auto Company in Mexico 5 years in a row.</p>
-              <p><i class="fa fa-star" aria-hidden="true"></i>&nbsp;Rated AA+ by S&P.</p>
-              <p><i class="fa fa-star" aria-hidden="true"></i>&nbsp;More tan 54 contries worldwide.</p>
-              <p><i class="fa fa-star" aria-hidden="true"></i>&nbsp;Bilingual Staff 24/7.</p>
-              
-            </div>
           </div>
         </div>
+        <div class="row mb-5 justify-content-center">
+          <div class="col-md-3 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="">
+            <h3 class="card-title"><i class="fa fa-2x fa-star" style="color: #006Eb4" aria-hidden="true"></i></h3>
+            <p>No. 1 P&C Company in the World.</p>
+          </div>
+          <div class="col-md-3 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="card-title"><i class="fa fa-2x fa-star" style="color: #d1a311" aria-hidden="true"></i></h3>
+            <p>No. 1 Tourist Auto Company in Mexico 5 years in a row.</p>
+          </div>
+          <div class="col-md-3 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="card-title"><i class="fa fa-2x fa-star" style="color: #3cc5ee" aria-hidden="true"></i></h3>
+            <p>Rated AA+ by S&P.</p>
+          </div>
+          <div class="col-md-3 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="">
+            <h3 class="card-title"><i class="fa fa-2x fa-star" style="color: #EA8D1F" aria-hidden="true"></i></h3>
+            <p>More tan 54 contries worldwide.</p>
+          </div>
+          <div class="col-md-3 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="card-title"><i class="fa fa-2x fa-star" style="color: #18335B" aria-hidden="true"></i></h3>
+            <p>Bilingual Staff 24/7.</p>
+          </div>
+        </div>  
         <div class="row mb-5">
           <div class="col-12 text-center">
             <a href="https://chubbcrossborder.com/chubb/ap.php?a=ADM1046&pr=SB" target="_blank"><button class="btn btn-quote">Quote Here</button></a>
