--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 	            </div>
 	          </div>
 	        </div>
-	        <div class="row mb-5 justify-content-center">
+	        <div class="row justify-content-center">
 	          <div class="col-md-3 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="">
 	            <h3 class="card-title"><i class="fa fa-2x fa-star" style="color: #150F96" aria-hidden="true"></i></h3>
 	            <p>Best Tourist Company in Mexico</p>
