--- a/index.html
+++ b/index.html
@@ -636,6 +636,7 @@
 	        <div class="row mb-5">
 	          <div class="col-12 text-center" data-aos="fade">
 	            <h2 class="section-title mb-3" style="color: #132ceb">Supported by Chubb #1 Company in Mexico</h2>
+              <hr style="margin: 0 auto; padding-bottom: 1em; width: 65%;">
 	          </div>
 	        </div>
 	        <div class="row align-items-stretch">
@@ -685,6 +686,7 @@
 			<div class="row" style="margin-top: 2em;">
 	          <div class="col-12 text-center">
 	            <h2 class="section-title mb-3" style="color: #132ceb">About Us</h2>
+              <hr style="margin: 0 auto; padding-bottom: 1em; width: 65%;">
 
 	            <p>We are an experienced company that cares for you. Reliability and trust are our core values. With more than 20 years in the insurance business and leading the market in innovating products, we thrive to take service to the next level.</p>
 
@@ -730,6 +732,7 @@
 	        <div class="row mb-5">
 	          <div class="col-12 text-center">
 	            <h2 class="section-title mb-3" style="color: #132ceb">Contact Us</h2>
+              <hr style="margin: 0 auto; padding-bottom: 1em; width: 65%;">
 	          </div>
 	        </div>
 	        <div class="row mb-5">
